integ-tests/tests/snapshots/parser__signed_radix__plus_hex.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ plus_hex:1:5
  │
1 │ a = +0x0
  │     ^^^^ unable to parse number
